WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280648
[css-anchor-position-1] Parse anchor argument as <percent> instead of <percent-token>
https://bugs.webkit.org/show_bug.cgi?id=280648
Summary
[css-anchor-position-1] Parse anchor argument as <percent> instead of <percen...
Antti Koivisto
Reported
2024-09-30 15:39:08 PDT
anchor(calc(25%+25%)) should be legal.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-30 15:39:22 PDT
<
rdar://problem/137002629
>
Antti Koivisto
Comment 2
2024-09-30 15:48:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34472
Antti Koivisto
Comment 3
2024-10-01 10:24:42 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/48410
EWS
Comment 4
2024-10-01 10:44:50 PDT
Committed
284494@main
(04667409d1ec): <
https://commits.webkit.org/284494@main
> Reviewed commits have been landed. Closing PR #34472 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug