[css-anchor-position-1] Parse anchor argument as <percent> instead of <percent-token> https://bugs.webkit.org/show_bug.cgi?id=280648 rdar://137002629

Reviewed by Darin Adler.

Cases like anchor(calc(25% + 25%)) should be legal.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-parse-invalid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-parse-invalid.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-parse-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/anchor-parse-valid.html:
* Source/WebCore/css/calc/CSSCalcTree+Copy.cpp:
(WebCore::CSSCalc::copy):
* Source/WebCore/css/calc/CSSCalcTree+Evaluation.cpp:
(WebCore::CSSCalc::evaluate):
(WebCore::CSSCalc::evaluateWithoutFallback):

Evaluate the percentage.

* Source/WebCore/css/calc/CSSCalcTree+Evaluation.h:
* Source/WebCore/css/calc/CSSCalcTree+Parser.cpp:
(WebCore::CSSCalc::consumeValueWithoutSimplifyingCalc):

Factor into function.

(WebCore::CSSCalc::consumeAnchor):

Consume percentage value as calc tree.

* Source/WebCore/css/calc/CSSCalcTree+Serialization.cpp:
(WebCore::CSSCalc::serializeMathFunctionArguments):
(WebCore::CSSCalc::serializeWithoutOmittingPrefix):
* Source/WebCore/css/calc/CSSCalcTree+Simplification.cpp:
(WebCore::CSSCalc::simplify):
(WebCore::CSSCalc::copyAndSimplifyChildren):
* Source/WebCore/css/calc/CSSCalcTree.h:

Keep the percentage value for anchor-side as Node instead of resolved double.

* Source/WebCore/style/AnchorPositionEvaluator.cpp:
(WebCore::Style::computeInsetValue):
(WebCore::Style::AnchorPositionEvaluator::evaluate):
(WebCore::Style::AnchorPositionEvaluator::resolveAnchorValue): Deleted.
* Source/WebCore/style/AnchorPositionEvaluator.h:

Pass the evaluated Side value.

Canonical link: https://commits.webkit.org/284494@main