Source/WebCore/css/calc/CSSCalcTree+Copy.cpp
@@ -78,9 +78,20 @@ template<typename Op> Child copy(const IndirectNode<Op>& root)
     return makeChild(WTF::apply([](const auto& ...x) { return Op { copy(x)... }; } , *root), root.type);
 }
 
+static Anchor::Side copy(const Anchor::Side& side)
+{
+    return WTF::switchOn(side,
+        [](CSSValueID value) -> Anchor::Side {
+            return value;
+        }, [](const Child& percentage) -> Anchor::Side {
+            return copy(percentage);
+        }
+    );
+}
+
 Child copy(const IndirectNode<Anchor>& anchor)
 {
-    return makeChild(Anchor { .elementName = anchor->elementName, .side = anchor->side, .fallback = copy(anchor->fallback) }, anchor.type);
+    return makeChild(Anchor { .elementName = anchor->elementName, .side = copy(anchor->side), .fallback = copy(anchor->fallback) }, anchor.type);
 }
 
 // MARK: Exposed functions
